# equitylab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/: main.py
src/equitylab/backtest/: __init__.py  engine.py  metrics.py
src/equitylab/data/: __init__.py  cache.py
src/equitylab/data/loaders/: yahoo.py
src/equitylab/screening/: __init__.py  orchestrator.py  post_yahoo.py  pre_yahoo.py
src/equitylab/signals/: __init__.py  features.py  labels.py
src/equitylab/strategy/: __init__.py  config.py  pipeline.py  walkforward.py
tests/: backtest_engine_test.py  cache_test.py  orchestrator_test.py  post_yahoo_test.py  pre_yahoo_test.py  signals_features_test.py  signals_labels_test.py  walkforward_test.py  yahoo_test.py
