[project]
name = "equitylab"
version = "0.0.1"
authors = [
  { name="Tosin Ogundimu", email="140530539+oowoo123@users.noreply.github.com" },
]
description = "Screen equities, then train and backtest a leakage-safe walk-forward ML strategy."
readme = "README.md"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "duckdb>=1.5.4",
    "numpy",
    "pandas",
    "scikit-learn",
    "streamlit",
    "xgboost>=3.2.0",
    "yfinance",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TosinDevelops/equitylab"
Issues = "https://github.com/TosinDevelops/equitylab/issues"


[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pandas-stubs>=2.3.3.260113",
    "pytest>=9.1.1",
]

[tool.mypy]
python_version = "3.13"
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["yfinance.*", "sklearn.*"]
ignore_missing_imports = true
